[gd_scene load_steps=3 format=3 uid="uid://udahaw57xw8j"]

[ext_resource type="Script" path="res://SceneController.gd" id="1_tgu5x"]
[ext_resource type="Texture2D" uid="uid://b4w2ciu8yrsx" path="res://mancia_mansion_c64.png" id="2_dg1fp"]

[node name="SceneManager" type="Node2D"]
script = ExtResource("1_tgu5x")
dialog_path = "res://dialog.json"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(512, 160)
texture = ExtResource("2_dg1fp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelScene" type="Panel" parent="CanvasLayer"]
offset_top = 320.0
offset_right = 1024.0
offset_bottom = 520.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelScene"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 1000.0
offset_bottom = 184.0
text = "O COMEÇO DA JORNADA

Adol se encontra em um caminho, em meio à uma florests densa..."

[node name="PanelOptions" type="Panel" parent="CanvasLayer"]
offset_top = 528.0
offset_right = 1024.0
offset_bottom = 696.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelOptions"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 1008.0
offset_bottom = 152.0
text = "1 - Ir em frente
2 - Não ir
3 - Fazer nada (que parece ser mais interessante)"

[node name="PanelOutcome" type="Panel" parent="CanvasLayer"]
offset_top = 704.0
offset_right = 1024.0
offset_bottom = 768.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelOutcome"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 992.0
offset_bottom = 48.0
